--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     
-<h1>Descargame esta</h1>
-<a href="app-debug.apk" download>Haz click en esta wea</a>
+<h1>Descargame esta apk</h1>
+<a href="app-debug.apk" download>Haz click </a>
 
 </body>
 </html>
